; ModuleID = '/home/carl/AnghaBench/nanomsg/src/protocols/pubsub/extr_trie.c_nn_node_putchar.c'
source_filename = "/home/carl/AnghaBench/nanomsg/src/protocols/pubsub/extr_trie.c_nn_node_putchar.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nn_node_putchar(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp slt i32 %3, 32
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i32, i32* %2, align 4
  %7 = icmp sgt i32 %6, 127
  br i1 %7, label %8, label %10

8:                                                ; preds = %5, %1
  %9 = call i32 @putchar(i32 63)
  br label %13

10:                                               ; preds = %5
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @putchar(i32 %11)
  br label %13

13:                                               ; preds = %10, %8
  ret void
}

declare dso_local i32 @putchar(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
